syntax = "proto3";
option go_package = "./rpc_impl";

package user;

service IUser {
  rpc Login(LoginReq) returns (LoginRes);
}

message LoginReq {
  string user_name = 1;
  string password = 2;
}

message LoginRes {
  bool is_success = 1;
  string err = 2;
}
